feat: add new function - sort, getArray

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="acient-container">
-      <div class="acient"><img src="./assets/Ancients/Cthulthu.png"  id="cthulthu"></div>
+      <div class="acient"><img src="./assets/Ancients/Cthulthu.png"  id="cthulhu"></div>
       <div class="acient"><img src="./assets/Ancients/ShubNiggurath.png" id="shubNiggurath"></div>
       <div class="acient"><img src="./assets/Ancients/IogSothoth.png" id="iogSothoth"></div>
       <div class="acient"><img src="./assets/Ancients/Azathoth.png" id="azathoth"></div>
@@ -23,60 +23,58 @@
       <div class="complexity" id="hard">высокий</div>
       <div class="complexity" id="too-hard">очень высокий</div>
     </div>
-    <div class="toss-container">
-      <div class="rest">
-        <div class="rest-first"> 
-          <p class="stage">I этап</p> 
-          <div class="rest-green">
-            <img src="./assets/MythicCards/greenCard.png">
-            <p class="number">2</p>
+  <div class="toss-container">
+        <div class="rest">
+        <!--<div class="rest-first"> 
+            <p class="stage">I этап</p> 
+            <div class="rest-green">
+              <img src="./assets/MythicCards/greenCard.png">
+              <p class="number"></p>
+            </div>
+            <div class="rest-brown">
+              <img src="./assets/MythicCards/brownCard.png">
+              <p class="number">4</p>
+            </div>
+            <div class="rest-blue">
+              <img src="./assets/MythicCards/blueCard.png">
+              <p class="number">0</p>
+            </div>
           </div>
-          <div class="rest-brown">
-            <img src="./assets/MythicCards/brownCard.png">
-            <p class="number">4</p>
+          <div class="rest-second">
+            <p class="stage">II этап</p> 
+            <div class="rest-green">
+              <img src="./assets/MythicCards/greenCard.png">
+              <p class="number"></p>
+            </div>
+            <div class="rest-brown">
+              <img src="./assets/MythicCards/brownCard.png">
+              <p class="number"></p>
+            </div>
+            <div class="rest-blue">
+              <img src="./assets/MythicCards/blueCard.png">
+              <p class="number"></p>
+            </div>
           </div>
-          <div class="rest-blue">
-            <img src="./assets/MythicCards/blueCard.png">
-            <p class="number">0</p>
+          <div class="rest-third">
+            <p class="stage">III этап</p> 
+            <div class="rest-green">
+              <img src="./assets/MythicCards/greenCard.png">
+              <p class="number"></p>
+            </div>
+            <div class="rest-brown">
+              <img src="./assets/MythicCards/brownCard.png">
+              <p class="number"></p>
+            </div>
+            <div class="rest-blue">
+              <img src="./assets/MythicCards/blueCard.png">
+              <p class="number"></p>
+            </div>-->
           </div>
-        </div>
-        <div class="rest-second">
-          <p class="stage">II этап</p> 
-          <div class="rest-green">
-            <img src="./assets/MythicCards/greenCard.png">
-            <p class="number"></p>
-          </div>
-          <div class="rest-brown">
-            <img src="./assets/MythicCards/brownCard.png">
-            <p class="number"></p>
-          </div>
-          <div class="rest-blue">
-            <img src="./assets/MythicCards/blueCard.png">
-            <p class="number"></p>
-          </div>
-        </div>
-        <div class="rest-third">
-          <p class="stage">III этап</p> 
-          <div class="rest-green">
-            <img src="./assets/MythicCards/greenCard.png">
-            <p class="number"></p>
-          </div>
-          <div class="rest-brown">
-            <img src="./assets/MythicCards/brownCard.png">
-            <p class="number"></p>
-          </div>
-          <div class="rest-blue">
-            <img src="./assets/MythicCards/blueCard.png">
-            <p class="number"></p>
-          </div>
-      </div>
-    </div>
       <div class="card-wrapper">
         <div class="pack-back"><img src="./assets/mythicCardBackground.png" alt="pack back"></div>
        <div class="card-face hidden"></div>
       </div>
-     
-       <div class="toss-pack">Замешать колоду</div>
+      <div class="toss-pack">Замешать колоду</div>
       
     </div>
   </div>
