feat: add show-function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="acient"><img src="./assets/Ancients/IogSothoth.png" id="iogSothoth"></div>
       <div class="acient"><img src="./assets/Ancients/Azathoth.png" id="azathoth"></div>
     </div>
-    <div class="compexity-container">
+    <div class="complexity-container transparent">
       <h2 class="complexity-title">уровень игры</h2>
       <div class="complexity" id="too-easy">очень легкий</div>
       <div class="complexity" id="easy">легкий</div>
@@ -23,7 +23,7 @@
       <div class="complexity" id="hard">высокий</div>
       <div class="complexity" id="too-hard">очень высокий</div>
     </div>
-  <div class="toss-container">
+  <div class="toss-container transparent">
         <div class="rest">
         <!--<div class="rest-first"> 
             <p class="stage">I этап</p> 
